aws-backend/MessageApi/eks-config/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: message-api-ingress
  namespace: message-api
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/subnets: subnet-b4b3bdcc, subnet-29cbe363, subnet-cffe11a6
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: message-api
              servicePort: 8080
